# dev_configs

./: .clang-format  .clang-tidy  CMakeLists.txt  install_hooks.sh  run_clang_format.sh  run_clang_tidy.sh
.githooks/: pre-commit
